# airva

./: .gitignore  README.md  local.env
@ArduinoUno/: count.ino
@LoRaDragino/: example.ino
@Logs/: README.md
DOC/: README.md
RaspberryPiOS-install/: README.md  install.sh
RaspberryPiOS-install/app/airva/: .env.local  README.md  data.sqlite3  install_step.txt  main.py  pyproject.toml
RaspberryPiOS-install/app/airva/airva/backend/: index.py
RaspberryPiOS-install/app/airva/airva/backend/backend/: settings.py
RaspberryPiOS-install/app/airva/airva/chirpstack_decode/: package-lock.json  package.json  server.js
RaspberryPiOS-install/app/airva/airva/middleware/sendDataToThingsboard/: index.py
RaspberryPiOS-install/app/airva/airva/middleware/systemController/: index.py
RaspberryPiOS-install/app/airva/airva/middleware/watchDeviceEvents/: index.py
RaspberryPiOS-install/app/airva/airva/mock/sensor/contactsn04/: README.md  init.py
RaspberryPiOS-install/app/airva/airva/mock/sensor/esp8266node1/: README.md  init.py
RaspberryPiOS-install/app/airva/airva/mock/sensor/esp8266node2/: README.md  init.py
RaspberryPiOS-install/app/airva/airva/mock/sensor/stmphum24/: init.py
RaspberryPiOS-install/app/airva/airva/seeddata/: index.py
RaspberryPiOS-install/app/airva/airva/test/: a.py  index.py  thingsboard.py
RaspberryPiOS-install/app/airva/install/: README.md  setup.sh  systemd.sh
RaspberryPiOS-install/app/airva/tests/: test_airva.py
SystemdService/: README.md  setup.sh
WLAN/: README.md  demo.sh  init.sh  setup.sh  wl.sh
apache2/: README.md
(+49 files in other folders)
